[gd_scene load_steps=19 format=3 uid="uid://c2g0hw7qcw70y"]

[ext_resource type="Script" path="res://scripts/vine_spike.gd" id="1_t4cqd"]
[ext_resource type="Texture2D" uid="uid://2novrdyskt0u" path="res://sprites/pvv_vine.png" id="2_38b3h"]
[ext_resource type="Texture2D" uid="uid://tigwy4fuo68s" path="res://assets/characters/babihutan/Attack/1.png" id="2_nu4np"]
[ext_resource type="Texture2D" uid="uid://dw5yr2ec0mkb2" path="res://assets/characters/babihutan/Attack/2.png" id="3_8iyt0"]
[ext_resource type="Texture2D" uid="uid://cckiun4bfq4fd" path="res://assets/characters/babihutan/Idle/1.png" id="3_ta8wd"]
[ext_resource type="Texture2D" uid="uid://cghntmwnyams8" path="res://assets/characters/babihutan/Idle/2.png" id="4_bxpks"]
[ext_resource type="Texture2D" uid="uid://23yf24egwiqj" path="res://assets/characters/babihutan/Attack/3.png" id="4_if3w1"]
[ext_resource type="Texture2D" uid="uid://bf00c10aata84" path="res://assets/characters/babihutan/Attack/4.png" id="5_t6g5k"]
[ext_resource type="Texture2D" uid="uid://cm8xevo6x8tni" path="res://assets/characters/babihutan/Idle/3.png" id="5_tmewb"]
[ext_resource type="Texture2D" uid="uid://ci5fmmm8pnsje" path="res://assets/characters/babihutan/Idle/4.png" id="6_3qstn"]
[ext_resource type="Texture2D" uid="uid://boy7bjeoodk67" path="res://assets/characters/babihutan/Attack/5.png" id="6_6xprg"]

[sub_resource type="AtlasTexture" id="AtlasTexture_yml38"]
atlas = ExtResource("2_38b3h")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rs0op"]
atlas = ExtResource("2_38b3h")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xfe72"]
atlas = ExtResource("2_38b3h")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jc7ff"]
atlas = ExtResource("2_38b3h")
region = Rect2(128, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_wed4m"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_nu4np")
}, {
"duration": 1.0,
"texture": ExtResource("3_8iyt0")
}, {
"duration": 1.0,
"texture": ExtResource("4_if3w1")
}, {
"duration": 1.0,
"texture": ExtResource("5_t6g5k")
}, {
"duration": 1.0,
"texture": ExtResource("6_6xprg")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yml38")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rs0op")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xfe72")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jc7ff")
}],
"loop": true,
"name": &"idle",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_ta8wd")
}, {
"duration": 1.0,
"texture": ExtResource("4_bxpks")
}, {
"duration": 1.0,
"texture": ExtResource("5_tmewb")
}, {
"duration": 1.0,
"texture": ExtResource("6_3qstn")
}],
"loop": true,
"name": &"idle2",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ehcpx"]
size = Vector2(20, 14)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_6fcvy"]
radius = 4.0
height = 24.0

[node name="vine_spike" type="Node2D"]
script = ExtResource("1_t4cqd")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_wed4m")
animation = &"idle"
frame_progress = 0.893059
speed_scale = 0.8

[node name="vine_hit_range" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="vine_hit_range"]
shape = SubResource("RectangleShape2D_ehcpx")

[node name="hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
light_mask = 512
visibility_layer = 512
position = Vector2(0, 10)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_6fcvy")
disabled = true

[connection signal="frame_changed" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_frame_changed"]
[connection signal="input_event" from="vine_hit_range" to="." method="_on_vine_hit_range_input_event"]
